samples/_failures_safe/1761292412_379ddd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fb651954.c: In function ‘main’:
./samples/SAFE/__tmp_fb651954.c:152:13: error: ‘total_’ undeclared (first use in this function)
  152 |             total_
      |             ^~~~~~
./samples/SAFE/__tmp_fb651954.c:152:13: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fb651954.c:152:19: error: expected ‘;’ at end of input
  152 |             total_
      |                   ^
      |                   ;
./samples/SAFE/__tmp_fb651954.c:152:13: error: expected declaration or statement at end of input
  152 |             total_
      |             ^~~~~~
./samples/SAFE/__tmp_fb651954.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fb651954.c:152:13: error: expected declaration or statement at end of input
